# AutoPunkte

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  activate.py  config.yaml  main.py  pyproject.toml
.github/workflows/: activate_coupons.yml
Mullvad.tblk/: client.down.osx.sh  client.up.osx.sh  mullvad_de_ber.conf
src/: __init__.py  captcha_solver.py  notifier.py  payback_activator.py  test.py
