[project]
name = "autopunkte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.4",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "pydoll-python>=1.5.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]
